# claudemd-forge

./: .gitignore  .gitleaks.toml  BUILD_GUIDE.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  MONETIZATION.md
output/: AreteDriver_CLAUDE.md  Argus_Overview_CLAUDE.md  Argus_Overview_Windows_CLAUDE.md  Chefwise_CLAUDE.md  DecisionLog_CLAUDE.md  Dossier_CLAUDE.md  EVE_Sentinel_CLAUDE.md  EVE_Ships_CLAUDE.md  G13_Linux_CLAUDE.md  Gorgon_CLAUDE.md  HID-Origo-Integration_CLAUDE.md  LikX_CLAUDE.md  RazerControls_CLAUDE.md  RedOPS_CLAUDE.md  SteamProtonHelper_CLAUDE.md  Win-the-week-planner_CLAUDE.md  ai-skills_CLAUDE.md  animus_CLAUDE.md  claudemd-forge_CLAUDE.md  convergent_CLAUDE.md  eve-ship-sprites_CLAUDE.md  flathub_CLAUDE.md  lobster_CLAUDE.md  notes_CLAUDE.md  pomodoro-timer_CLAUDE.md  portfolio_CLAUDE.md  system-prompts-and-models-of-ai-tools_CLAUDE.md  tidewise_CLAUDE.md  vdc-core_CLAUDE.md  vdc-display_CLAUDE.md
prompts/: 01_foundation.md  02_scanner.md  03_analyzers.md  04_generators.md  05_cli.md  06_auditor.md  07_templates.md  08_publish.md
scripts/: keygen.py  stripe_setup.py
src/claudemd_forge/: __init__.py  __main__.py  ci.py  cli.py  config.py  exceptions.py  gates.py  licensing.py  models.py  scanner.py
src/claudemd_forge/analyzers/: __init__.py  commands.py  domain.py  language.py  patterns.py
src/claudemd_forge/generators/: __init__.py  auditor.py  composer.py  sections.py
src/claudemd_forge/templates/: __init__.py  base.py  (+2 more)
tests/: conftest.py  test_analyzers.py  test_auditor.py  test_checkers.py  test_ci.py  test_cli.py  test_gates.py  test_generators.py  test_integration.py  test_licensing.py  test_models.py  test_scanner.py  test_templates.py
(+6 files in other folders)
